--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 .form__text {
-  padding: 1em;
+  padding: 10px 55px 10px 10px;
   height: 50px;
   width: 250px;
   border-radius: 50px;
@@ -120,8 +120,8 @@ body {
 
 .card__photo img {
   display: block;
-  width: 100%;
-  height: auto;
+  height: 100%;
+  width: auto;
 }
 
 .card__info {
