--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ body {
     background: #003366;
   }
   &__text {
-    padding: 1em;
+    padding: 10px 55px 10px 10px;
     height: 50px;
     width: 250px;
     border-radius: 50px;
@@ -74,8 +74,8 @@ body {
     width: 300px;
     img {
       display: block;
-      width: 100%;
-      height: auto;
+      height: 100%;
+      width: auto;
     }
   }
   &__info {
